# bpsr-build-planner

./: .editorconfig  .gitignore  .prettierignore  Cargo.toml  LICENSE  NOTICE.md  README.md  ability-score.html  about.html  eslint.config.js  index.html  mise.toml  package-lock.json  package.json  settings.html  stats-detail.html  tsconfig.node.json  vite.config.base.ts  vite.config.ts  vite.config.web.ts
.github/workflows/: deploy-backend.yml  deploy-pages.yml  release-desktop.yml
backend/: Dockerfile  README.md  config.example.php  docker-compose.yml  schema.sql
backend/public/: .htaccess  shorten.php
docs/: ARCHITECTURE.md  CHARACTER_DATA_MODEL.md  EQUIPMENT_ENCHANT.md  SHORT_URL.md  STATUS_CALCULATION.md
scripts/: derive-traditional-chinese.mjs  extract-ztable.mjs  release.mjs
scripts/lib/: extractLocaleText.mjs  json-file.mjs  read-table.mjs
src/: AboutApp.tsx  App.css  App.tsx  Footer.css  Footer.tsx  SettingsApp.tsx  ability-score-main.tsx  about-main.tsx  about.css  buildInfo.ts  i18n.ts  main.tsx  settings-main.tsx  settings.css  stats-detail-main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/about/: AboutApp.tsx  AboutDialog.css  AboutDialog.tsx  AboutPanel.tsx  ChangelogList.tsx  about-panel.css  about.css  changelog.css  changelog.json  changelogStorage.test.ts
src/assets/: .gitignore
src/build-planner/: BuildPlanner.tsx  ShareBuildButton.tsx  ShortUrlImporter.tsx  arrayState.ts  assetMap.ts  build-planner.css  buildPlan.test.ts  buildPlan.ts  classData.ts  planCode.ts  (+8 more)
(+184 files in other folders)
