[package]
name = "bpsr-build-planner"
version = "0.2.6"
edition = "2024"
description = "BPSR character build planner"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
